almost ready, sorting code
